# chrome-dino-multiplayer

./: .gitignore  .replit  LICENSE  dino.js  index.html  nginx.conf  package-lock.json  package.json  readme.md  server.js  sketch.js
.circleci/: config.yml
.github/workflows/: main.yml
dino-backend/: :w  Cargo.toml  README.MD  build.rs  graph_c_acc.csv  graph_c_v.csv
dino-backend/src/: config_options.rs  main.rs  map_generator.rs  math.rs  obstacles.rs  session.rs  session_exec.rs  sessions_manager.rs  timer.rs  validator.rs
dino-frontend/: README.md  package-lock.json  package.json  svelte.config.js
dino-frontend-v2/: index.html  package-lock.json  package.json
dino-frontend-v2/src/: game.ts  main.ts  renderer.ts  socket-client.ts  sprites.ts  texture-map.ts  ws-de-serialize.ts
dino-frontend-v2/src/html/: 404.html  game.html  index.html
dino-frontend/src/: app.css  app.html  store.ts
dino-frontend/src/components/: Card.astro  E.svelte  Game.svelte  GameMenu.svelte  Overview.svelte
dino-frontend/src/game/: game.ts  physics.ts  player.ts  renderer.ts  socket-client.ts  sprites.ts  texture-map.ts  (+1 more)
game/: index.html  style.css
game/play/: index.html  keyboard-events.js  main.js  service-worker.js  sprites.js
public/: README.md  dino.js  index.html  index.js  obst.js  sketch.js  style.css
public/assets/: chrome_dino_1.pixil
public/game/: README.md  bird.js  cloud.js  dino.js  ground.js  index.html  obst.js  sketch.js  style.css
public/libraries/: README.md
src-old/: readme.md
src-old/public/: style.css
utils/: a.out  libc_version.c
(+30 files in other folders)
